tree-sitter-grammars/test/corpus/statements.txt
==================
Simple if statement
==================

Если Условие Тогда
  Переменная = 1;
КонецЕсли

---

(source_file
  (if_statement
    condition: (identifier)
    consequence: (assignment_statement
      left: (identifier)
      right: (number_literal))))

==================
If-else statement
==================

Если Условие Тогда
  Переменная = 1;
Иначе
  Переменная = 2;
КонецЕсли

---

(source_file
  (if_statement
    condition: (identifier)
    consequence: (assignment_statement
      left: (identifier)
      right: (number_literal))
    (else_clause
      (assignment_statement
        left: (identifier)
        right: (number_literal)))))

==================
If-elseif-else statement
==================

Если Условие1 Тогда
  Результат = 1;
ИначеЕсли Условие2 Тогда
  Результат = 2;
Иначе
  Результат = 3;
КонецЕсли

---

(source_file
  (if_statement
    condition: (identifier)
    consequence: (assignment_statement
      left: (identifier)
      right: (number_literal))
    (elseif_clause
      condition: (identifier)
      (assignment_statement
        left: (identifier)
        right: (number_literal)))
    (else_clause
      (assignment_statement
        left: (identifier)
        right: (number_literal)))))

==================
While loop
==================

Пока Счетчик < 10 Цикл
  Счетчик = Счетчик + 1;
КонецЦикла

---

(source_file
  (while_statement
    condition: (comparison_expression
      left: (identifier)
      operator: <
      right: (number_literal))
    body: (assignment_statement
      left: (identifier)
      right: (binary_expression
        (identifier)
        (number_literal)))))

==================
For loop
==================

Для Индекс = 1 По 10 Цикл
  Сумма = Сумма + Индекс;
КонецЦикла

---

(source_file
  (for_statement
    variable: (identifier)
    start: (number_literal)
    end: (number_literal)
    body: (assignment_statement
      left: (identifier)
      right: (binary_expression
        (identifier)
        (identifier)))))

==================
For each loop
==================

Для Каждого Элемент Из Коллекция Цикл
  Обработать(Элемент);
КонецЦикла

---

(source_file
  (for_each_statement
    variable: (identifier)
    collection: (identifier)
    body: (call_expression
      function: (identifier)
      (identifier))))

==================
Break statement in while
==================

Пока Истина Цикл
  Если Условие Тогда
    Прервать;
  КонецЕсли;
КонецЦикла

---

(source_file
  (while_statement
    condition: (boolean_literal)
    body: (if_statement
      condition: (identifier)
      consequence: (break_statement))))

==================
Continue statement in for
==================

Для Индекс = 1 По 10 Цикл
  Если Индекс = 5 Тогда
    Продолжить;
  КонецЕсли;
  Обработать(Индекс);
КонецЦикла

---

(source_file
  (for_statement
    variable: (identifier)
    start: (number_literal)
    end: (number_literal)
    body: (if_statement
      condition: (comparison_expression
        left: (identifier)
        operator: =
        right: (number_literal))
      consequence: (continue_statement))
    body: (call_expression
      function: (identifier)
      (identifier))))

==================
Nested if statements
==================

Если А > 0 Тогда
  Если Б > 0 Тогда
    Результат = 1;
  Иначе
    Результат = 2;
  КонецЕсли;
КонецЕсли

---

(source_file
  (if_statement
    condition: (comparison_expression
      left: (identifier)
      operator: >
      right: (number_literal))
    consequence: (if_statement
      condition: (comparison_expression
        left: (identifier)
        operator: >
        right: (number_literal))
      consequence: (assignment_statement
        left: (identifier)
        right: (number_literal))
      (else_clause
        (assignment_statement
          left: (identifier)
          right: (number_literal))))))

==================
Logical AND expression
==================

Если А > 0 И Б > 0 Тогда
  Результат = 1;
КонецЕсли

---

(source_file
  (if_statement
    condition: (logical_expression
      left: (comparison_expression
        left: (identifier)
        operator: >
        right: (number_literal))
      right: (comparison_expression
        left: (identifier)
        operator: >
        right: (number_literal)))
    consequence: (assignment_statement
      left: (identifier)
      right: (number_literal))))

==================
Logical OR expression
==================

Если А = 0 Или Б = 0 Тогда
  Результат = 0;
КонецЕсли

---

(source_file
  (if_statement
    condition: (logical_expression
      left: (comparison_expression
        left: (identifier)
        operator: =
        right: (number_literal))
      right: (comparison_expression
        left: (identifier)
        operator: =
        right: (number_literal)))
    consequence: (assignment_statement
      left: (identifier)
      right: (number_literal))))

==================
Unary NOT expression
==================

Если Не Условие Тогда
  Действие();
КонецЕсли

---

(source_file
  (if_statement
    condition: (unary_expression
      (identifier))
    consequence: (call_expression
      function: (identifier))))

==================
Parenthesized expression
==================

Если (А + Б) > 10 Тогда
  Результат = 1;
КонецЕсли

---

(source_file
  (if_statement
    condition: (comparison_expression
      left: (parenthesized_expression
        (binary_expression
          (identifier)
          (identifier)))
      operator: >
      right: (number_literal))
    consequence: (assignment_statement
      left: (identifier)
      right: (number_literal))))

==================
Complex logical expression
==================

Если (А > 0 И Б > 0) Или В > 0 Тогда
  Результат = 1;
КонецЕсли

---

(source_file
  (if_statement
    condition: (logical_expression
      left: (parenthesized_expression
        (logical_expression
          left: (comparison_expression
            left: (identifier)
            operator: >
            right: (number_literal))
          right: (comparison_expression
            left: (identifier)
            operator: >
            right: (number_literal))))
      right: (comparison_expression
        left: (identifier)
        operator: >
        right: (number_literal)))
    consequence: (assignment_statement
      left: (identifier)
      right: (number_literal))))

==================
All comparison operators
==================

Процедура Тест()
  Если А = Б Тогда
    Результат1 = 1;
  КонецЕсли;
  
  Если А <> Б Тогда
    Результат2 = 1;
  КонецЕсли;
  
  Если А < Б Тогда
    Результат3 = 1;
  КонецЕсли;
  
  Если А > Б Тогда
    Результат4 = 1;
  КонецЕсли;
  
  Если А <= Б Тогда
    Результат5 = 1;
  КонецЕсли;
  
  Если А >= Б Тогда
    Результат6 = 1;
  КонецЕсли;
КонецПроцедуры

---

(source_file
  (procedure_declaration
    name: (identifier)
    parameters: (parameter_list)
    (procedure_body
      (if_statement
        condition: (comparison_expression
          left: (identifier)
          operator: =
          right: (identifier))
        consequence: (assignment_statement
          left: (identifier)
          right: (number_literal)))
      (if_statement
        condition: (comparison_expression
          left: (identifier)
          operator: <>
          right: (identifier))
        consequence: (assignment_statement
          left: (identifier)
          right: (number_literal)))
      (if_statement
        condition: (comparison_expression
          left: (identifier)
          operator: <
          right: (identifier))
        consequence: (assignment_statement
          left: (identifier)
          right: (number_literal)))
      (if_statement
        condition: (comparison_expression
          left: (identifier)
          operator: >
          right: (identifier))
        consequence: (assignment_statement
          left: (identifier)
          right: (number_literal)))
      (if_statement
        condition: (comparison_expression
          left: (identifier)
          operator: <=
          right: (identifier))
        consequence: (assignment_statement
          left: (identifier)
          right: (number_literal)))
      (if_statement
        condition: (comparison_expression
          left: (identifier)
          operator: >=
          right: (identifier))
        consequence: (assignment_statement
          left: (identifier)
          right: (number_literal))))))

==================
English keywords
==================

If Condition Then
  Variable = 1;
EndIf

---

(source_file
  (if_statement
    condition: (identifier)
    consequence: (assignment_statement
      left: (identifier)
      right: (number_literal))))

==================
Mixed case keywords
==================

ЕСЛИ условие ТОГДА
  переменная = 1;
КОНЕЦЕСЛИ

---

(source_file
  (if_statement
    condition: (identifier)
    consequence: (assignment_statement
      left: (identifier)
      right: (number_literal))))